tests/negative/gold/interfaceB-test.gold
tests/negative/interfaceB-test.toit:6:3: error: Interfaces can't have fields
  x := null
  ^
Compilation failed
